--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="flex  justify-center text-center  ml-[60px] mt-1 ">
 
 
-    <div class="first sticky">
+    <div class="first sticky top-4 h-screen">
       <div class="logo flex items-center space-x-4 w-fit px-5  hover:cursor-pointer hover:rounded-full">
         <svg viewBox="0 0 24 24" aria-hidden="true"
           class="w-8 r-4qtqp9 r-yyyyoo r-dnmrzs r-bnwqim r-lrvibr r-m6rgpd r-lrsllp r-18jsvk2 r-16y2uox r-8kz0gk">
